--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,20 @@
 body {
+    padding: 2em;
+    margin: 0;
+    font-family: Lato;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#wrapper {
+    max-width: 1024px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 2em;
-    margin: 0;
     justify-content: space-between;
     align-items: flex-start;
-    font-family: Lato;
 }
 
 #header {
@@ -16,6 +24,10 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0.5em;
+}
+
+#subhead {
+    text-align: center;
 }
 
 #tabs {
